--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<div class='transparent-part'></div>
 				<div class='visible-part'></div>
 			</div>
+			<div class='spot'></div>
 		</div>
 	</div>
 </body>
